--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.html",
   "scripts": {
     "live": "browser-sync start --config bs-config.js",
-    "sass": "sass --watch src/styles.scss:src/_build/styles.css src/pages/:src/_build/pages/ src/components/:src/_build/components/",
+    "sass": "sass --watch --no-source-map src/styles.scss:src/styles.css src/pages/:src/pages/ src/components/:src/components/",
     "typescript": "tsc --watch",
     "serve": "npm-run-all --parallel live sass typescript",
-    "sass:build": "sass src/styles.scss:src/_build/styles.css src/pages/:src/_build/pages/ src/components/:src/_build/components/",
+    "sass:build": "sass --no-source-map src/styles.scss:src/styles.css src/pages/:src/pages/ src/components/:src/components/",
     "typescript:build": "tsc",
     "build": "npm-run-all sass:build typescript:build"
   },
