--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.html",
   "scripts": {
     "live": "browser-sync start --config bs-config.js",
-    "sass": "sass --watch --no-source-map src/styles.scss:src/styles.css src/pages/:src/pages/ src/components/:src/components/",
+    "sass": "sass --watch --no-source-map src/styles.scss:src/_styles.css",
     "typescript": "tsc --watch",
-    "serve": "npm-run-all --parallel live sass typescript",
-    "sass:build": "sass --no-source-map src/styles.scss:src/styles.css src/pages/:src/pages/ src/components/:src/components/",
+    "browserify": "watchify src/main.js -o src/_bundle.js -v",
+    "serve": "npm-run-all --parallel live sass typescript browserify",
+    "sass:build": "sass --no-source-map src/styles.scss:src/_styles.css --style compressed",
     "typescript:build": "tsc",
-    "build": "npm-run-all sass:build typescript:build"
+    "browserify:build": "browserify src/main.js -o src/_bundle.js",
+    "build": "npm-run-all sass:build typescript:build browserify:build"
   },
   "repository": {
     "type": "git",
@@ -21,5 +23,13 @@
   "bugs": {
     "url": "https://github.com/guillaume-haerinck/imac-frontend-coffe/issues"
   },
-  "homepage": "https://github.com/guillaume-haerinck/imac-frontend-coffe#readme"
+  "homepage": "https://github.com/guillaume-haerinck/imac-frontend-coffe#readme",
+  "dependencies": {
+    "matter-js": "^0.14.2",
+    "@types/matter-js": "^0.10.2"
+  },
+  "devDependencies": {
+    "browserify": "^16.2.3",
+    "watchify": "^3.11.0"
+  }
 }
