--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,14 @@
 {
     "compilerOptions": {
-        "allowJs": true,
-        "target": "es5"
+        "allowJs": false,
+        "target": "es5",
     },
     "include": [
         "./src/main.ts",
         "./src/components/**/*.ts",
         "./src/pages/**/*.ts"
+    ],
+    "exclude": [
+        "node_modules"
     ]
 }
