--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "",
   "main": "index.html",
   "scripts": {
-    "live": "browser-sync start --config bs-config.js",
     "sass": "sass --watch --no-source-map src/styles.scss:src/_styles.css",
     "typescript": "tsc --watch",
     "browserify": "watchify src/main.js -o src/_bundle.js -v",
-    "serve": "npm-run-all --parallel live sass typescript browserify",
+    "live": "browser-sync start --config bs-config.js",
+    "serve": "npm-run-all --parallel typescript sass browserify live",
     "sass:build": "sass --no-source-map src/styles.scss:src/_styles.css --style compressed",
     "typescript:build": "tsc",
     "browserify:build": "browserify src/main.js -o src/_bundle.js",
-    "build": "npm-run-all sass:build typescript:build browserify:build"
+    "uglify": "uglifyjs src/_bundle.js -o src/_bundle.js",
+    "build": "npm-run-all sass:build typescript:build browserify:build uglify"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "browserify": "^16.2.3",
+    "uglify-js": "^3.4.9",
     "watchify": "^3.11.0"
   }
 }
