--- a/package.json
+++ b/package.json
@@ -1,37 +1,36 @@
 {
-  "name": "imac-frontend-coffe",
+  "name": "imac-frontend-coffee",
   "version": "1.0.0",
   "description": "",
-  "main": "index.html",
+  "main": "src/index.html",
   "scripts": {
-    "sass": "sass --watch --no-source-map src/styles.scss:src/_styles.css",
-    "typescript": "tsc --watch",
-    "browserify": "watchify src/main.js -o src/_bundle.js -v",
+    "build": "webpack",
+    "watch": "webpack --watch",
     "live": "browser-sync start --config bs-config.js",
-    "serve": "npm-run-all --parallel typescript sass browserify live",
-    "sass:build": "sass --no-source-map src/styles.scss:src/_styles.css --style compressed",
-    "typescript:build": "tsc",
-    "browserify:build": "browserify src/main.js -o src/_bundle.js",
-    "uglify": "uglifyjs src/_bundle.js -o src/_bundle.js",
-    "build": "npm-run-all sass:build typescript:build browserify:build uglify"
+    "serve": "npm-run-all --parallel watch live"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/guillaume-haerinck/imac-frontend-coffe.git"
+    "url": "git+https://github.com/guillaume-haerinck/imac-frontend-coffee.git"
   },
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/guillaume-haerinck/imac-frontend-coffe/issues"
+    "url": "https://github.com/guillaume-haerinck/imac-frontend-coffee/issues"
   },
-  "homepage": "https://github.com/guillaume-haerinck/imac-frontend-coffe#readme",
-  "dependencies": {
-    "matter-js": "^0.14.2",
-    "@types/matter-js": "^0.10.2"
-  },
+  "homepage": "https://github.com/guillaume-haerinck/imac-frontend-coffee#readme",
   "devDependencies": {
-    "browserify": "^16.2.3",
-    "uglify-js": "^3.4.9",
-    "watchify": "^3.11.0"
+    "browser-sync": "^2.26.3",
+    "css-loader": "^1.0.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.9.4",
+    "npm-run-all": "^4.1.3",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "ts-loader": "^5.3.0",
+    "typescript": "^3.1.6",
+    "webpack": "^4.24.0",
+    "webpack-cli": "^3.1.2"
   }
 }
