--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,8 @@
 {
     "compilerOptions": {
-        "allowJs": false,
+        "outDir": "./dist/",
+        "module": "es6",
+        "allowJs": true,
         "target": "es5",
-    },
-    "include": [
-        "./src/main.ts",
-        "./src/components/**/*.ts",
-        "./src/pages/**/*.ts"
-    ],
-    "exclude": [
-        "node_modules"
-    ]
+    }
 }
