--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "src/index.html",
   "scripts": {
-    "build": "webpack",
-    "watch": "webpack --watch",
+    "build": "webpack --mode=development",
+    "watch": "webpack --watch --mode=development",
     "live": "browser-sync start --config bs-config.js",
     "serve": "npm-run-all --parallel watch live"
   },
@@ -23,6 +23,7 @@
     "browser-sync": "^2.26.3",
     "css-loader": "^1.0.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.4",
     "npm-run-all": "^4.1.3",
