--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "build": "webpack --mode=development",
     "watch": "webpack --watch --mode=development",
-    "live": "browser-sync start --config bs-config.js",
-    "serve": "npm-run-all --parallel watch live"
+    "serve": "webpack-dev-server --mode=development"
   },
   "repository": {
     "type": "git",
@@ -20,18 +19,17 @@
   },
   "homepage": "https://github.com/guillaume-haerinck/imac-frontend-coffee#readme",
   "devDependencies": {
-    "browser-sync": "^2.26.3",
     "css-loader": "^1.0.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.4",
-    "npm-run-all": "^4.1.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.3.0",
     "typescript": "^3.1.6",
     "webpack": "^4.24.0",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   }
 }
