--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "webpack --mode=development",
     "watch": "webpack --watch --mode=development",
-    "serve": "webpack-dev-server --mode=development"
+    "serve": "webpack-dev-server --mode=development",
+    "serve:prod": "cross-env NODE_ENV=production webpack-dev-server --mode=production",
+    "build:prod": "cross-env NODE_ENV=production webpack --mode=production"
   },
   "repository": {
     "type": "git",
@@ -19,7 +21,9 @@
   },
   "homepage": "https://github.com/guillaume-haerinck/imac-frontend-coffee#readme",
   "devDependencies": {
+    "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
+    "ejs-loader": "^0.3.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
