--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "webpack --mode=development",
     "watch": "webpack --watch --mode=development",
     "serve": "webpack-dev-server --mode=development",
+    "monitor": "webpack-dashboard",
     "serve:prod": "cross-env NODE_ENV=production webpack-dev-server --mode=production",
     "build:prod": "cross-env NODE_ENV=production webpack --mode=production"
   },
@@ -21,6 +22,7 @@
   },
   "homepage": "https://github.com/guillaume-haerinck/imac-frontend-coffee#readme",
   "devDependencies": {
+    "@types/node": "^10.12.2",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
     "ejs-loader": "^0.3.1",
@@ -34,6 +36,7 @@
     "typescript": "^3.1.6",
     "webpack": "^4.24.0",
     "webpack-cli": "^3.1.2",
+    "webpack-dashboard": "^2.0.0",
     "webpack-dev-server": "^3.1.10"
   }
 }
