ajout de style sur component

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,6 +1,9 @@
 {
     "extends": "stylelint-config-standard",
     "rules": {
-        "indentation": tab
+        "indentation": tab,
+		"selector-type-no-unknown": [ true, {
+			"ignoreTypes": ["/^app-/"]
+		}]
     }
 }
