--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,6 @@
 		"target": "esnext",
 		"experimentalDecorators": true,
 		"sourceMap": true,
-		"baseUrl": "./node_modules/"
+        "baseUrl": "./node_modules/",
     }
 }
