--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "style-loader": "^0.23.1",
     "stylelint": "^9.7.1",
     "stylelint-config-standard": "^18.2.0",
+    "stylelint-scss": "^3.4.0",
     "stylelint-webpack-plugin": "^0.10.5",
     "ts-lint": "^4.5.1",
     "ts-loader": "^5.3.0",
