--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/guillaume-haerinck/imac-frontend-coffee#readme",
   "devDependencies": {
     "@types/node": "^10.12.2",
+    "@types/three": "^0.93.10",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
     "ejs-loader": "^0.3.1",
@@ -44,5 +45,8 @@
     "webpack-cli": "^3.1.2",
     "webpack-dashboard": "^2.0.0",
     "webpack-dev-server": "^3.1.10"
+  },
+  "dependencies": {
+    "three": "^0.99.0"
   }
 }
