--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
-    "three": "^0.99.0"
+    "three": "^0.99.0",
+    "three-gltf-loader": "^1.99.0"
   }
 }
