--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "@webcomponents/custom-elements": "^1.2.1",
     "three": "^0.99.0",
     "three-gltf-loader": "^1.99.0",
     "typed.js": "^2.0.9"
